<resources>
    <string name="app_name">AmazonHandmade</string>

    <!-- Login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="artisan_log_in">Artisan Log in</string>
    <string name="cga_log_in">CGA Log In</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_artisan_profile">ArtisanProfile</string>
    <string name="logout">Logout</string>

    <!-- Artisan Update Password -->
    <string name="artisan_update_password_toolbar">Update Password</string>
    <string name="artisan_update_password_password_not_match_error">Password entered does not match</string>
    <string name="artisan_update_password_old_tv">Old password</string>
    <string name="artisan_update_password_confirm_tv">Confirm password</string>
    <string name="artisan_update_password_new_tv">New password</string>
    <string name="artisan_update_password_welcome_text">Your current password has expired, please provide a new password for the account.</string>

    <!-- Add Artisan -->
    <string name="loc_missing_comma">Missing \',\' between City and Country.</string>
    <string name="add_artisan_contact_number_tv_hint">Artisan Contact Number</string>
    <string name="add_artisan_loc_tv_hint">Artisan City, Country</string>
    <string name="add_artisan_loc_tv">Location: </string>
    <string name="add_artisan_name_tv_hint">Artisan Name</string>
    <string name="add_artisan_name_tv">Name: </string>
    <string name="add_artisan_add_button">Add Artisan</string>
    <string name="add_artisan_contact_number_tv">Contact :</string>
    <string name="add_artisan_email_tv_hint">Email (optional)</string>
    <string name="add_artisan_bio_tv_hint">Artisan Biography</string>
    <string name="add_artisan_bio_tv">Biography: </string>
    <string name="add_artisan_toolbar_text">Add Artisan</string>
    <string name="invalid_type_for_artisan_name" translatable="false">Must be alpha characters</string>
    <string name="invalid_type_for_artisan_number" translatable="false">Must be numbers</string>
    <string name="invalid_number" translatable="false">invalid number</string>

    <!-- Add Item Category -->
    <string name="item_category_toolbar_text">Item Category</string>
    <string name="item_category_category_tv">Category</string>
    <string name="item_category_sub_category_tv">Sub-Category</string>
    <string name="item_category_specific_category_tv">Specific Category</string>

    <!-- Add Item Images -->
    <string name="item_images_tv">Item Image</string>
    <string name="item_images_main">Main Image</string>
    <string name="item_images_alt1">Alternative Image 1</string>
    <string name="item_images_alt2">Alternative Image 2</string>
    <string name="item_images_alt3">Alternative Image 3</string>
    <string name="item_images_alt4">Alternative Image 4</string>
    <string name="item_images_alt5">Alternative Image 5</string>

    <!-- Add Item Info -->
    <string name="item_info_product_name_tv_hint">Product Name</string>
    <string name="item_info_product_desc_tv_hint">Product Description</string>
    <string name="item_info_product_price_tv_hint">Product Price in Dollars ($)</string>
    <string name="item_info_product_quantity_tv_hint">Product Quantity</string>
    <string name="item_info_product_production_tv_hint">Days</string>
    <string name="item_info_product_toolbar_text">Item Info</string>
    <string name="item_info_shipping_method">Select Shipping Method Below: </string>

    <!-- Add Item Review -->
    <string name="item_review_confirm_listing">Confirm Listing</string>
    <string name="item_review_toolbar_text">Review Item</string>

    <!-- Artisan Item List -->
    <string name="artisan_item_list_toolbar_text">Item List</string>
    <string name="artisan_item_search_tv_hint">Search Items</string>

    <!-- Artisan Payout -->
    <string name="artisan_payout_toolbar_text">Payout</string>
    <string name="artisan_payout_continue_to_signature_button">Continue to Signature</string>
    <string name="artisan_payout_amount_tv_hint">Payout Amount</string>
    <string name="artisan_payout_amount_tv">Payout Amount: </string>
    <string name="artisan_payout_date_tv">Payout Date: </string>

    <!-- Artisan Profile -->
    <string name="artisan_profile_toolbar_text">Artisan Profile</string>
    <string name="intent_chooser_title">Choose Application to send message with</string>
    <string name="artisan_profile_message">Message</string>
    <string name="artisan_profile_payout">Payout</string>
    <string name="artisan_profile_payout_history">History</string>
    <string name="artisan_profile_item_list">Item List</string>
    <!-- Edit Artisan -->
    <string name="edit_artisan_toolbar_text">Edit Artisan Profile</string>
    <string name="edit_artisan_update_button">Update Artisan</string>

    <!-- Home Screen Strings -->
    <string name="homeScreenWelcome">Welcome</string>
    <string name="homeScreenPlaceHoldercga">CGA 0</string>

    <!-- Add Item Info -->
    <string name="add_item_info_shipping_warning">Please Select a Shipping Method.</string>

    <!-- Add Item review -->
    <string name="item_review_usually_ships">Usually fulfilled within </string>
    <string name="number_in_stock">   in Stock</string>
    <string name="item_review_response_dialog_title">Item Listing …</string>
    <string name="item_review_listing_failed">Your item was NOT submitted!</string>
    <string name="item_review_listing_success">Your item have been successfully submitted!</string>

    <!-- Artisan Payout -->
    <string name="payout_date">Date: </string>
    <string name="payout_error_title">Payout Error</string>
    <string name="payout_error_message">Payout amount exceeds Artisan\'s Payout balance!</string>
    <string name="payout_balance">Current Balance: </string>
    <string name="payout_amount_format_error">Please enter a valid amount! </string>

    <!-- Product Detail -->
    <string name="product_detail_usually_ships_in">"Usually fulfilled within  "</string>

    <!-- Order List -->
    <string name="order_date">Order Date: </string>
    <string name="order_cost">Total Cost: </string>
    <string name="title_list_orders">Orders</string>
    <string name="order_list_search_order_hint">Search Orders</string>
    <string name="placeholder_text">__placeholder__</string>

    <!-- Order Screen -->
    <string name="order_id"> </string>
    <string name="order_fulfilled">Fulfilled: </string>
    <string name="items_listed">Items listed: </string>
    <string name="update_fulfilled">Update Fulfilled Status</string>

    <!-- Payout Signature -->
    <string name="signature_clear_button">Clear</string>
    <string name="signature_done_button">Done</string>

    <!-- Setting -->
    <string name="settings_toolbar_text">Settings</string>
    <string name="settings_language_preference">Language Preference</string>
    <string name="settings_update_setting">Update Settings</string>
    <string name="settings_sync_account">Sync Account Data</string>
    <string name="setting_current_language_TV">Current Language: </string>
    <string name="setting_change_language_button">Change Language</string>
    <string name="setting_log_out_button">Log Out</string>

    <!-- List All Artisan -->
    <string name="list_artisan_toolbar_text">Artisans</string>
    <string name="list_artisan_search_hint">Search Artisans</string>

    <!-- reports -->
    <string name="report_toolbar_text">Generate Reports</string>
    <string name="report_type_tv">Type of Report</string>
    <string name="report_target_tv">Select Target Artisan(s)</string>
    <string name="report_target_all">Target All Artisan</string>
    <string name="report_generate_button">Generate Report</string>
    <string name="report_select_all">Select All</string>
    <string name="report_select_none">Select None</string>
    <string name="view_report_done_button">Done</string>
    <string name="view_report_toolbar_text">View Generated Report</string>

    <!-- Payout History -->
    <string name="payout_histoy_toolbar_text">Payout History</string>
    <!-- Utility Strings -->
    <string name="requiredFieldError">Required!</string>
    <string name="utility_days">"  Days."</string>
    <string name="continue_button_text">Continue</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="chooser_title">Choose a Messaging Application</string>
    <string name="send_message_button">Send</string>
    <string name="action_log_in_short">Artisan Log In</string>
    <string name="utility_update">Update</string>

</resources>
